# tsur

./: Cargo.toml  README.md
crates/tsur-args/: Cargo.toml
crates/tsur-ascii/: Cargo.toml
crates/tsur-ascii/src/: lib.rs
crates/tsur-config/: Cargo.toml
crates/tsur-config/src/: lib.rs
crates/tsur-core/: Cargo.toml
crates/tsur-core/src/: main.rs
crates/tsur-run/: Cargo.toml
crates/tsur-run/src/: lib.rs
src/: args.rs  config.rs  consts.rs  lib.rs  main.rs  run.rs  t1.txt  text.txt
src/ascii/: ascii.rs  test.rs
src/config/: config.rs  test.rs
