[package]
name = "tsur-config"
version = "0.1.1"
authors = ["109149 <109149qwe@gmail.com>"]
description = "Config ASCII character counter."
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0"
