[package]
name = "tsur"
version = "0.1.1"
authors = ["109149 <109149qwe@gmail.com>"]
description = "ASCII character counter."
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsur-args = { path = "../tsur-args", version = "0.1.1" }
tsur-config = { path = "../tsur-config", version = "0.1.1" }
tsur-run = { path = "../tsur-run", version = "0.1.1" }

[[bin]]
path = "src/main.rs"
name = "tsur"
