[package]
name = "tsur-run"
version = "0.1.1"
authors = ["109149 <109149qwe@gmail.com>"]
description = "Runner for ASCII character counter."
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsur-config = { path = "../tsur-config" }
tsur-ascii = { path = "../tsur-ascii" }
